Fix alignment in <td> boxes for manager landing page

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -20,6 +20,7 @@
 		border-collapse: collapse;
 	  box-sizing: border-box;
 	  border: solid 1px;
+	  text-align: center;
 	}
 	th {
 		text-align: center;
